# fastapi_hexagonal_ddd

./: README.md  pyproject.toml
bruno/FastAPI/environments/: local.bru
bruno/FastAPI/props/: get -api-v1-props-.bru  post -api-v1-props-.bru
src/rhh/: main.py
src/rhh/application/: animatronic_command_use_cases.py  animatronic_query_use_cases.py  animatronic_use_cases.py
src/rhh/domain/: animatronic_model.py  models.py  shared_model.py
src/rhh/infrastructure/api/: main.py
src/rhh/infrastructure/api/dtos/: animatronics.py
src/rhh/infrastructure/api/handlers/: exception_handlers.py
src/rhh/infrastructure/api/routes/: animatronics.py
src/rhh/shared/: exceptions.py
