[tool.poetry]
name = "rhh"
version = "0.1.0"
description = "PoC python hexagonal ddd"
authors = ["Alfredo Fdez Manzano"]
readme = "README.md"

[tool.poetry.scripts]
start = "rhh.main:start"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
